--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "@angular/router": "~7.1.0",
     "@webcomponents/custom-elements": "^1.2.1",
     "core-js": "^2.5.4",
-    "document-register-element": "^1.8.1",
+    "document-register-element": "1.8.1",
     "rxjs": "~6.3.3",
     "tslib": "^1.9.0",
     "zone.js": "~0.8.26"
